--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -15,7 +15,7 @@ MAX_SPINDLE_OVERRIDE = 1.000000
 MIN_SPINDLE_OVERRIDE = 0.500000
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 2
-PROGRAM_PREFIX = /home/jjt/linuxcnc/nc_files
+PROGRAM_PREFIX = ~/linuxcnc/nc_files
 INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
 DEFAULT_LINEAR_VELOCITY = 6.000000
 MAX_LINEAR_VELOCITY = 15.0
@@ -40,7 +40,7 @@ CYCLE_TIME = 0.010
 
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
-SUBROUTINE_PATH = /home/jjt/linuxcnc/configs/Mill7i85s/subroutines/
+SUBROUTINE_PATH = ~/linuxcnc/configs/Mill7i85s/subroutines/
 
 [EMCMOT]
 EMCMOT = motmod
