Update for how the PP lathe config was working before changing to mesa.

--- a/lathePP/lathePP.ini
+++ b/lathePP/lathePP.ini
@@ -14,14 +14,15 @@ POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 ARCDIVISION = 64
 GRIDS = 10mm 20mm 50mm 100mm 
-MAX_FEED_OVERRIDE = 1.25
+MAX_FEED_OVERRIDE = 1.5
 MIN_SPINDLE_OVERRIDE = 0.5
 MAX_SPINDLE_OVERRIDE = 1.2
-DEFAULT_LINEAR_VELOCITY = 2.50
 MIN_LINEAR_VELOCITY = 0.1
-MAX_LINEAR_VELOCITY = 15.00
+MAX_LINEAR_VELOCITY = 20.00
+DEFAULT_LINEAR_VELOCITY = 3.0
+
 INTRO_GRAPHIC = linuxcnc.gif
-INTRO_TIME = 2
+INTRO_TIME = 1
 PROGRAM_PREFIX = /home/jjt/linuxcnc/nc_files
 INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
 PYVCP = custompanel.xml
@@ -30,8 +31,8 @@ LATHE = 1
 #
 # Necessary for Lathe Macros.
 #
-#EMBED_TAB_NAME=Cycles
-#EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -u lathehandler.py -x {XID} lathemacro.ui
+EMBED_TAB_NAME=Cycles
+EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -u lathehandler.py -x {XID} lathemacro.ui
 
 [KINS]
 JOINTS = 2
@@ -97,7 +98,7 @@ MAX_ACCELERATION = 100.0
 MIN_LIMIT = -100.0
 MAX_LIMIT = 200.0
 STEPGEN_MAXACCEL = 937.5
-SCALE = -500.0
+SCALE = -1000.0
 FERROR = 1
 MIN_FERROR = .25
 
@@ -111,7 +112,7 @@ HOME_IGNORE_LIMTS = 1
 HOME_SEQUENCE = 1
 
 [AXIS_Z]
-MAX_VELOCITY = 15.0
+MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 100.0
 MIN_LIMIT = -100.0
 MAX_LIMIT = 200.0
@@ -119,7 +120,7 @@ MAX_LIMIT = 200.0
 [JOINT_1]
 TYPE = LINEAR
 HOME = 0.0
-MAX_VELOCITY = 15.0
+MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 100.0
 MIN_LIMIT = -100.0
 MAX_LIMIT = 200.0
