--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -19,22 +19,21 @@ INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
 INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
-LATHE = 1
 POSITION_FEEDBACK = ACTUAL
 DEFAULT_LINEAR_VELOCITY = 6.000000
 MAX_LINEAR_VELOCITY = 25.000000
-MIN_LINEAR_VELOCITY = 0.100000
+MIN_LINEAR_VELOCITY = 0.500000
 DEFAULT_ANGULAR_VELOCITY = 12.000000
 MAX_ANGULAR_VELOCITY = 180.000000
 MIN_ANGULAR_VELOCITY = 1.666667
-EDITOR = gedit
+EDITOR = nano
+LATHE = 1
 GEOMETRY = xz
 #
 # Necessary for Lathe Macros.
 #
 EMBED_TAB_NAME=Cycles
 EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -u lathehandler.py -x {XID} lathemacro.ui
-
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -81,7 +80,7 @@ COORDINATES =  XZ
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
 DEFAULT_LINEAR_VELOCITY = 2.50
-MAX_LINEAR_VELOCITY = 15
+MAX_LINEAR_VELOCITY = 25.00
 
 [EMCIO]
 EMCIO = io
@@ -91,28 +90,29 @@ TOOL_TABLE = tool.tbl
 #******************************************
 [AXIS_X]
 MAX_VELOCITY = 35
-MAX_ACCELERATION = 100.0
+MAX_ACCELERATION = 750.0
 MIN_LIMIT = -100.0
-MAX_LIMIT = 100.0
+MAX_LIMIT = 200.0
 
 [JOINT_0]
 TYPE = LINEAR
+HOME = 0.0
 FERROR = 10.0
 MIN_FERROR = 1.0
 MAX_VELOCITY = 35
-MAX_ACCELERATION = 100.0
+MAX_ACCELERATION = 500.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
-STEPGEN_MAXVEL = 50
-STEPGEN_MAXACCEL = 125.00
+STEPGEN_MAXVEL = 40
+STEPGEN_MAXACCEL = 750
 P = 1000.0
-I = 0.0
+I = 1.0
 D = 0.0
 FF0 = 0.0
 FF1 = 1.0
 FF2 = 0.0
 BIAS = 0.0
-DEADBAND = 0.0
+DEADBAND = 0.005
 MAX_OUTPUT = 0.0
 ENCODER_SCALE = 500.0
 # these are in nanoseconds
@@ -120,10 +120,9 @@ DIRSETUP   = 10000
 DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
-STEP_SCALE = -500.0
+STEP_SCALE = 1000.0
 MIN_LIMIT = -100.0
-MAX_LIMIT = 100.0
-
+MAX_LIMIT = 200.0
 HOME = 0.0
 HOME_OFFSET = 0.0
 HOME_SEARCH_VELOCITY = 0.0
@@ -131,34 +130,35 @@ HOME_LATCH_VELOCITY = 0.0
 HOME_INITIAL_VELOCITY = 0.0
 HOME_FINAL_VELOCITY = 0.0
 HOME_IGNORE_LIMTS = 1
-HOME_SEQUENCE = 1
+HOME_SEQUENCE = 0
 #******************************************
 
 #******************************************
 [AXIS_Z]
-MAX_VELOCITY = 35
-MAX_ACCELERATION = 100.0
-MIN_LIMIT = -200.0
-MAX_LIMIT = 100.0
+MAX_VELOCITY = 25.0
+MAX_ACCELERATION = 500.0
+MIN_LIMIT = -100.0
+MAX_LIMIT = 300.0
 
 [JOINT_1]
 TYPE = LINEAR
+HOME = 0.0
 FERROR = 10.0
 MIN_FERROR = 1.0
-MAX_VELOCITY = 35
-MAX_ACCELERATION = 100.0
+MAX_VELOCITY = 35.0
+MAX_ACCELERATION = 500.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
-STEPGEN_MAXVEL = 50
-STEPGEN_MAXACCEL = 125
+STEPGEN_MAXVEL = 31.25
+STEPGEN_MAXACCEL = 937.50
 P = 1000.0
-I = 0.0
+I = 1.0
 D = 0.0
 FF0 = 0.0
 FF1 = 1.0
 FF2 = 0.0
 BIAS = 0.0
-DEADBAND = 0.0
+DEADBAND = 0.010
 MAX_OUTPUT = 0.0
 # these are in nanoseconds
 DIRSETUP   = 10000
@@ -166,9 +166,8 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = 400.0
-MIN_LIMIT = -200.0
-MAX_LIMIT = 100.0
-
+MIN_LIMIT = -100.0
+MAX_LIMIT = 300.0
 HOME = 0.0
 HOME_OFFSET = 0.0
 HOME_SEARCH_VELOCITY = 0.0
@@ -176,7 +175,7 @@ HOME_LATCH_VELOCITY = 0.0
 HOME_INITIAL_VELOCITY = 0.0
 HOME_FINAL_VELOCITY = 0.0
 HOME_IGNORE_LIMTS = 1
-HOME_SEQUENCE = 2
+HOME_SEQUENCE = 0
 #******************************************
 
 [SPINDLE_0]
