Added spindle control. Change x home switch to min instead of max. Y linear scale is disabled (hardware issues). Added camera support. Extended y limits to use full 175mm range. Tuned up the joypad jog speeds. Added encoder velocity to pyvcp display panel.

--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -7,11 +7,27 @@ VERSION = 1.1
 DISPLAY = axis
 PYVCP = pyvcp-panel.xml
 
+#
+# Add Camera
+#
+EMBED_TAB_NAME = Camera
+# Did not start. Warnings about python in 2.7???
+#EMBED_TAB_COMMAND = camview-emc  -w {XID}
+
+# Blank Camera tab
+#EMBED_TAB_COMMAND=halcmd loadusr qtvcp –push_xid cam_align
+#
+# cam_align in 2.8.1 doesn't support -o option to select device
+#
+#EMBED_TAB_COMMAND= halcmd loadusr -Wn qtvcp_embed qtvcp -o 2 -d -c qtvcp_embed -x {XID} cam_align
+# Simple, but Works.
+EMBED_TAB_COMMAND = mplayer -wid {XID} tv:// -tv driver=v4l2:device=/dev/video2:width=640 -vf rectangle=-1:2:-1:240,rectangle=2:-1:320:-1
+
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 
 MAX_FEED_OVERRIDE = 1.5
-MAX_SPINDLE_OVERRIDE = 1.000000
+MAX_SPINDLE_OVERRIDE = 1.500000
 MIN_SPINDLE_OVERRIDE = 0.500000
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 2
@@ -84,7 +100,7 @@ TOOL_TABLE = tool.tbl
 [AXIS_X]
 MAX_VELOCITY = 25.0
 MAX_ACCELERATION = 750.0
-MIN_LIMIT = -0.1
+MIN_LIMIT = 0.0
 MAX_LIMIT = 419.0
 
 [JOINT_0]
@@ -115,21 +131,26 @@ STEPSPACE  = 5000
 STEP_SCALE = 200.0
 MIN_LIMIT = -0.1
 MAX_LIMIT = 419.0
-HOME = 400.0
-HOME_OFFSET = 418.000000
-HOME_SEARCH_VEL = 12.000000
-HOME_LATCH_VEL = 2.00000
-HOME_FINAL_VEL = 12.0
-HOME_USE_INDEX = NO
+
+HOME_SEARCH_VEL = -12.000000
+HOME_LATCH_VEL = 1.00000
+HOME_FINAL_VEL = +12.0
 HOME_IGNORE_LIMITS = YES
+HOME_USE_INDEX = NO
+HOME_OFFSET = 0.000000
+HOME = 0.0
+HOME_IS_SHARED = YES
+#HOME_ABSOLUTE_ENCODER = NO
 HOME_SEQUENCE = 1
+#VOLATILE_HOME = NO
+#LOCKING_INDEXER = NO
 
 #******************************************
 [AXIS_Y]
 MAX_VELOCITY = 25.0
 MAX_ACCELERATION = 750.0
 MIN_LIMIT = -0.1
-MAX_LIMIT = 171.0
+MAX_LIMIT = 175.0
 
 [JOINT_1]
 TYPE = LINEAR
@@ -158,20 +179,24 @@ STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = -200.0
 MIN_LIMIT = -0.1
-MAX_LIMIT = 171.0
+MAX_LIMIT = 175.0
 
-HOME = 160.0
-HOME_OFFSET = 170.000000
-HOME_SEARCH_VEL = 10.0
+HOME_SEARCH_VEL = 12.0
 HOME_LATCH_VEL = 1.0
 HOME_FINAL_VEL = 12.0
-HOME_USE_INDEX = NO
 HOME_IGNORE_LIMITS = YES
+HOME_USE_INDEX = NO
+HOME_OFFSET = 173.000000
+HOME = 163.0
+HOME_IS_SHARED = YES
+#HOME_ABSOLUTE_ENCODER = NO
 HOME_SEQUENCE = 1
+#VOLATILE_HOME = NO
+#LOCKING_INDEXER = NO
 
 #******************************************
 [AXIS_Z]
-MAX_VELOCITY = 10.0
+MAX_VELOCITY = 15.0
 MAX_ACCELERATION = 250.0
 MIN_LIMIT = -0.1
 MAX_LIMIT = 419.0
@@ -204,14 +229,19 @@ STEPSPACE  = 5000
 STEP_SCALE = -961.94649
 MIN_LIMIT = -0.1
 MAX_LIMIT = 419.0
-HOME = 410.0
-HOME_OFFSET = 418.000000
-HOME_SEARCH_VEL = 6.000000
+
+HOME_SEARCH_VEL = 10.000000
 HOME_LATCH_VEL = 1.00000
-HOME_FINAL_VEL = 6.0
-HOME_USE_INDEX = NO
+HOME_FINAL_VEL = 10.0
 HOME_IGNORE_LIMITS = YES
+HOME_USE_INDEX = NO
+HOME_OFFSET = 418.000000
+HOME = 410.0
+HOME_IS_SHARED = YES
+#HOME_ABSOLUTE_ENCODER = NO
 HOME_SEQUENCE = 0
+#VOLATILE_HOME = NO
+#LOCKING_INDEXER = NO
 
 #******************************************
 
