Temporarily disable camera (python2.7 dependencies not working with linuxcnc 2.8.2 install.

--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -21,7 +21,7 @@ EMBED_TAB_NAME = Camera
 #
 #EMBED_TAB_COMMAND= halcmd loadusr -Wn qtvcp_embed qtvcp -o 2 -d -c qtvcp_embed -x {XID} cam_align
 # Simple, but Works.
-EMBED_TAB_COMMAND = mplayer -wid {XID} tv:// -tv driver=v4l2:device=/dev/video2:width=640 -vf rectangle=-1:2:-1:240,rectangle=2:-1:320:-1
+#EMBED_TAB_COMMAND = mplayer -wid {XID} tv:// -tv driver=v4l2:device=/dev/video2:width=640 -vf rectangle=-1:2:-1:240,rectangle=2:-1:320:-1
 
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
