--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -57,6 +57,8 @@ CYCLE_TIME = 0.010
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
 SUBROUTINE_PATH = ~/linuxcnc/configs/Mill7i85s/subroutines/
+REMAP=M6   modalgroup=6  ngc=toolsetter
+ON_ABORT_COMMAND=O <on_abort> call
 
 [EMCMOT]
 EMCMOT = motmod
