Or together the pins from the tool length and probe. Turn on TWOPASS and move the postgui loads into another file. This allows OR2s to be allocated in different files: Mill7i85s.hal and joypad_jog_speed.hal.
Changed the Z STEP_SCALE for new gear ratio. Playing around with the accels and speeds as I am getting occational tracking errors.

--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -70,10 +70,12 @@ SERVO_PERIOD = 1000000
 CARD0=hm2_7i92.0
 
 [HAL]
+TWOPASS = on,verbose
 HALUI = halui
 HALFILE = Mill7i85s.hal
 HALFILE = estop-chain.hal
 HALFILE = quad_encoder.hal
+HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
 POSTGUI_HALFILE = postgui_call_list.hal
 SHUTDOWN = shutdown.hal
 
@@ -130,7 +132,11 @@ DIRSETUP   = 10000
 DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
-STEP_SCALE = 200.0
+STEPS_PER_REV = 1000
+TURNS_PER_MM = 1/5
+STEP_SCALE = 200.0 
+#STEPS_PER_REV*TURNS_PER_MM
+#STEP_SCALE = 200.0
 MIN_LIMIT = -0.1
 MAX_LIMIT = 419.0
 
@@ -179,7 +185,12 @@ DIRSETUP   = 10000
 DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
+
+STEPS_PER_REV = 1000
+TURNS_PER_MM = 1/5
+#STEPS_PER_REV*TURNS_PER_MM
 STEP_SCALE = -200.0
+
 MIN_LIMIT = -0.1
 MAX_LIMIT = 177.5
 
@@ -199,7 +210,7 @@ HOME_SEQUENCE = 1
 #******************************************
 [AXIS_Z]
 MAX_VELOCITY = 15.0
-MAX_ACCELERATION = 250.0
+MAX_ACCELERATION = 200.0
 MIN_LIMIT = -0.1
 MAX_LIMIT = 419.0
 
@@ -208,13 +219,13 @@ TYPE = LINEAR
 FERROR = 10.0
 MIN_FERROR = 1.0
 MAX_VELOCITY = 20.0
-MAX_ACCELERATION = 500.0
+MAX_ACCELERATION = 200.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
-STEPGEN_MAXVEL = 31.25
-STEPGEN_MAXACCEL = 937.50
+STEPGEN_MAXVEL = 20.0
+STEPGEN_MAXACCEL = 250.0
 P = 100.0
-I = 1.0
+I = 0.5
 D = 0.0
 FF0 = 0.0
 FF1 = 1.0
@@ -228,7 +239,14 @@ DIRSETUP   = 10000
 DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
-STEP_SCALE = -961.94649
+# In addition to the gearing inside the knee which requires 10 turns of the screw for 1" of travel.
+# This mill uses a belted drive system with a 20T gear on motor and 50T gear on shaft.
+GEAR_MOTOR_TEETH = 17
+GEAR_SHAFT_TEETH = 53
+STEPS_PER_REV = 800
+TURNS_PER_MM = 10/25.4
+#STEP_SCALE = -STEPS_PER_REV*TURNS_PER_MM*GEAR_SHAFT_TEETH/GEAR_MOTOR_TEETH
+STEP_SCALE = -981.9361
 MIN_LIMIT = -0.1
 MAX_LIMIT = 419.0
 
