--- a/router/router.ini
+++ b/router/router.ini
@@ -30,8 +30,18 @@ INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
 PYVCP = custompanel.xml
 
 [KINS]
+KINEMATICS = trivkins coordinates=XYZY
 JOINTS = 4
-KINEMATICS = trivkins coordinates=XYZA
+
+[TRAJ]
+COORDINATES = X Y Z Y
+LINEAR_UNITS = mm
+ANGULAR_UNITS = degree
+DEFAULT_LINEAR_VELOCITY = 25
+MAX_LINEAR_VELOCITY = 25
+DEFAULT_LINEAR_ACCELERATION = 500
+MAX_LINEAR_ACCELERATION = 500
+NO_FORCE_HOMING = 1
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -64,13 +74,6 @@ POSTGUI_HALFILE = postgui_call_list.hal
 [HALUI]
 # add halui MDI commands here (max 64) 
 
-[TRAJ]
-COORDINATES =  X Y Z A
-LINEAR_UNITS = mm
-ANGULAR_UNITS = degree
-DEFAULT_LINEAR_VELOCITY = 36.00
-MAX_LINEAR_VELOCITY = 25.00
-
 [EMCIO]
 EMCIO = io
 CYCLE_TIME = 0.100
@@ -80,24 +83,7 @@ TOOL_TABLE = tool.tbl
 MAX_VELOCITY = 23.75
 MAX_ACCELERATION = 750.0
 MIN_LIMIT = -0.001
-MAX_LIMIT = 200.0
-
-[JOINT_0]
-TYPE = LINEAR
-HOME = 0.0
-MIN_LIMIT = -0.001
-MAX_LIMIT = 200.0
-MAX_VELOCITY = 23.75
-MAX_ACCELERATION = 750.0
-STEPGEN_MAXACCEL = 937.5
-SCALE = 400.0
-FERROR = 1
-MIN_FERROR = .25
-HOME_OFFSET = 0.000000
-HOME_SEARCH_VEL = 1.500000
-HOME_LATCH_VEL = 1.250000
-HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = 1
+MAX_LIMIT = 700.0
 
 [AXIS_Y]
 MAX_VELOCITY = 25.0
@@ -105,65 +91,85 @@ MAX_ACCELERATION = 750.0
 MIN_LIMIT = -0.001
 MAX_LIMIT = 200.0
 
+[AXIS_Z]
+MAX_VELOCITY = 15
+MAX_ACCELERATION = 150.0
+MIN_LIMIT = -0.0
+MAX_LIMIT = 160.0
+
+[JOINT_0]
+TYPE = LINEAR
+MIN_LIMIT = -3
+MAX_LIMIT = 700.0
+MAX_VELOCITY = 23.75
+MAX_ACCELERATION = 750.0
+STEPGEN_MAXACCEL = 937.5
+SCALE = -400.0
+FERROR = 1
+MIN_FERROR = .25
+HOME = 0.0
+HOME_OFFSET = -1.0
+HOME_SEARCH_VEL = -15.0
+HOME_LATCH_VEL = -2.0
+HOME_FINAL_VEL = 15.0
+HOME_IGNORE_LIMITS = YES
+HOME_SEQUENCE = 1
+
 [JOINT_1]
 TYPE = LINEAR
 HOME = 0.0
+HOME_OFFSET = -1.0
 MIN_LIMIT = -0.001
 MAX_LIMIT = 200.0
 MAX_VELOCITY = 25.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
-SCALE = 80.0
+SCALE = -787.4015
 FERROR = 1
 MIN_FERROR = .25
 HOME_OFFSET = 0.000000
-HOME_SEARCH_VEL = 1.500000
-HOME_LATCH_VEL = 1.500000
+HOME_SEARCH_VEL = -10.00000
+HOME_LATCH_VEL = -2.0
+HOME_FINAL_VEL = 10.0
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = 2
-
-[AXIS_Z]
-MAX_VELOCITY = 25.0
-MAX_ACCELERATION = 750.0
-MIN_LIMIT = -100.0
-MAX_LIMIT = 0.001
+HOME_SEQUENCE = -2
 
 [JOINT_2]
 TYPE = LINEAR
-HOME = 0.0
-MIN_LIMIT = -100.0
-MAX_LIMIT = 0.001
 MAX_VELOCITY = 25.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
-SCALE = 80.0
+SCALE = 400.0
 FERROR = 1
 MIN_FERROR = .25
-HOME_OFFSET = 0.000000
-HOME_SEARCH_VEL = 1.500000
-HOME_LATCH_VEL = 1.500000
+
+MIN_LIMIT = -0.0
+MAX_LIMIT = 160.0
+
+HOME = 155.0
+HOME_OFFSET = 160.0
+HOME_SEARCH_VEL = 15.0
+HOME_LATCH_VEL = -2.0
+HOME_FINAL_VEL = 15.0
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = 0
 
-[AXIS_A]
-MAX_VELOCITY = 360.0
-MAX_ACCELERATION = 1200.0
-MIN_LIMIT = -9999.0
-MAX_LIMIT = 9999.0
-
 [JOINT_3]
-TYPE = ANGULAR
+TYPE = LINEAR
 HOME = 0.0
-MIN_LIMIT = -9999.0
-MAX_LIMIT = 9999.0
-MAX_VELOCITY = 360.0
-MAX_ACCELERATION = 1200.0
-STEPGEN_MAXACCEL = 1500.0
-SCALE = 1.11111111111
+HOME_OFFSET = -1.0
+MIN_LIMIT = -0.001
+MAX_LIMIT = 200.0
+MAX_VELOCITY = 25.0
+MAX_ACCELERATION = 750.0
+STEPGEN_MAXACCEL = 937.5
+SCALE = -787.4015
 FERROR = 1
 MIN_FERROR = .25
 HOME_OFFSET = 0.000000
-HOME_SEARCH_VEL = 0.050000
-HOME_LATCH_VEL = 0.050000
+HOME_SEARCH_VEL = -10.00000
+HOME_LATCH_VEL = -2.0
+HOME_FINAL_VEL = 10.0
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = 3
+HOME_SEQUENCE = -2
+
