gmoccapy chosen. MAX_VELOCITY tuned.

--- a/router/router.ini
+++ b/router/router.ini
@@ -8,8 +8,8 @@ DEBUG = 0
 VERSION = 1.1
 
 [DISPLAY]
-DISPLAY = axis
-EDITOR = gedit
+DISPLAY = gmoccapy
+EDITOR = nano
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 ARCDIVISION = 64
@@ -19,15 +19,15 @@ MIN_SPINDLE_OVERRIDE = 0.5
 MAX_SPINDLE_OVERRIDE = 1.2
 DEFAULT_LINEAR_VELOCITY = 2.50
 MIN_LINEAR_VELOCITY = 0
-MAX_LINEAR_VELOCITY = 25.00
-DEFAULT_ANGULAR_VELOCITY = 36.00
-MIN_ANGULAR_VELOCITY = 0
-MAX_ANGULAR_VELOCITY = 360.00
+MAX_LINEAR_VELOCITY = 15.00
+#DEFAULT_ANGULAR_VELOCITY = 10.00
+#MIN_ANGULAR_VELOCITY = 0
+#MAX_ANGULAR_VELOCITY = 360.00
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
 INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
-PYVCP = custompanel.xml
+#PYVCP = custompanel.xml
 
 [KINS]
 KINEMATICS = trivkins coordinates=XYZY
@@ -37,8 +37,8 @@ JOINTS = 4
 COORDINATES = X Y Z Y
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
-DEFAULT_LINEAR_VELOCITY = 25
-MAX_LINEAR_VELOCITY = 25
+DEFAULT_LINEAR_VELOCITY = 10
+MAX_LINEAR_VELOCITY = 15.0
 DEFAULT_LINEAR_ACCELERATION = 500
 MAX_LINEAR_ACCELERATION = 500
 NO_FORCE_HOMING = 1
@@ -80,19 +80,19 @@ CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
 
 [AXIS_X]
-MAX_VELOCITY = 23.75
+MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 750.0
 MIN_LIMIT = -0.001
 MAX_LIMIT = 700.0
 
 [AXIS_Y]
-MAX_VELOCITY = 25.0
+MAX_VELOCITY = 10.0
 MAX_ACCELERATION = 750.0
 MIN_LIMIT = -0.001
 MAX_LIMIT = 200.0
 
 [AXIS_Z]
-MAX_VELOCITY = 15
+MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 150.0
 MIN_LIMIT = -0.0
 MAX_LIMIT = 160.0
@@ -101,7 +101,7 @@ MAX_LIMIT = 160.0
 TYPE = LINEAR
 MIN_LIMIT = -3
 MAX_LIMIT = 700.0
-MAX_VELOCITY = 23.75
+MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
 SCALE = -400.0
@@ -121,7 +121,7 @@ HOME = 0.0
 HOME_OFFSET = -1.0
 MIN_LIMIT = -0.001
 MAX_LIMIT = 200.0
-MAX_VELOCITY = 25.0
+MAX_VELOCITY = 10.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
 SCALE = -787.4015
@@ -136,7 +136,7 @@ HOME_SEQUENCE = -2
 
 [JOINT_2]
 TYPE = LINEAR
-MAX_VELOCITY = 25.0
+MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
 SCALE = 400.0
@@ -160,7 +160,7 @@ HOME = 0.0
 HOME_OFFSET = -1.0
 MIN_LIMIT = -0.001
 MAX_LIMIT = 200.0
-MAX_VELOCITY = 25.0
+MAX_VELOCITY = 10.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
 SCALE = -787.4015
