VFD is working with router. Probe_screen_v2 is loading but not tested.

--- a/router/router.ini
+++ b/router/router.ini
@@ -2,11 +2,15 @@
 # If you make changes to this file, they will be
 # overwritten when you run stepconf again
 
+
 [EMC]
 MACHINE = router
 DEBUG = 0
 VERSION = 1.1
 
+#
+#
+#
 [DISPLAY]
 DISPLAY = gmoccapy
 EDITOR = nano
@@ -15,19 +19,51 @@ POSITION_FEEDBACK = ACTUAL
 ARCDIVISION = 64
 GRIDS = 10mm 20mm 50mm 100mm 1in 2in 5in 10in
 MAX_FEED_OVERRIDE = 1.2
-MIN_SPINDLE_OVERRIDE = 0.5
-MAX_SPINDLE_OVERRIDE = 1.2
+MIN_SPINDLE_OVERRIDE = 0.25
+MAX_SPINDLE_OVERRIDE = 1.0
+#DEFAULT_SPINDLE_SPEED = 3000.0
+
 DEFAULT_LINEAR_VELOCITY = 2.50
 MIN_LINEAR_VELOCITY = 0
 MAX_LINEAR_VELOCITY = 15.00
-#DEFAULT_ANGULAR_VELOCITY = 10.00
-#MIN_ANGULAR_VELOCITY = 0
-#MAX_ANGULAR_VELOCITY = 360.00
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
 INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
 #PYVCP = custompanel.xml
+
+EMBED_TAB_NAME=Probe Screen 
+EMBED_TAB_LOCATION = ntb_user_tabs
+EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -x {XID} -u python/probe_screen.py -H probe_icons/probe_screen.hal probe_icons/probe_screen.glade 
+
+#EMBED_TAB_NAME = Camera
+#EMBED_TAB_LOCATION = ntb_preview
+#EMBED_TAB_COMMAND = mpv /dev/video0 --hwdec=no --profile=low-latency --vo=xv --wid {XID} --vf-add=drawbox=-1:2:-1:240:t=1 --vf-add=drawbox=2:-1:320:-1:t=1 --no-border --x11-bypass-compositor=yes
+
+[TOOLSENSOR]
+# Absolute coordinates of the toolsetter pad 
+X = 10
+Y = 10
+# Absolute Z start search coordinates
+Z = 60
+# Maximum search distance and direction (sign)
+MAXPROBE = -60
+# Speed of movements during working in Probe Screen
+RAPID_SPEED = 600
+# Diameter of toolsetter pad 
+TS_DIAMETER = 10
+# The speed of the reverse rotation of the spindle when measuring the tool diameter
+REV_ROTATION_SPEED = 10
+
+[CHANGE_POSITION]
+# Abs coordinates tool change point
+X = 10
+Y = 10
+Z = 60
+
+[PYTHON]
+PATH_PREPEND = ./python
+TOPLEVEL = python/toplevel.py
 
 [KINS]
 KINEMATICS = trivkins coordinates=XYZY
@@ -58,6 +94,10 @@ CYCLE_TIME = 0.010
 
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
+FEATURES=30
+SUBROUTINE_PATH = macros
+REMAP=M6   modalgroup=6  prolog=change_prolog   ngc=manual_change  epilog=change_epilog
+
 
 [EMCMOT]
 EMCMOT = motmod
@@ -88,8 +128,8 @@ MAX_LIMIT = 700.0
 [AXIS_Y]
 MAX_VELOCITY = 10.0
 MAX_ACCELERATION = 750.0
-MIN_LIMIT = -0.001
-MAX_LIMIT = 200.0
+MIN_LIMIT = -1.0
+MAX_LIMIT = 1000.0
 
 [AXIS_Z]
 MAX_VELOCITY = 20.0
@@ -104,7 +144,7 @@ MAX_LIMIT = 700.0
 MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
-SCALE = -400.0
+SCALE = -400
 FERROR = 1
 MIN_FERROR = .25
 HOME = 0.0
@@ -117,20 +157,19 @@ HOME_SEQUENCE = 1
 
 [JOINT_1]
 TYPE = LINEAR
-HOME = 0.0
-HOME_OFFSET = -1.0
-MIN_LIMIT = -0.001
-MAX_LIMIT = 200.0
+MIN_LIMIT = -1.0
+MAX_LIMIT = 1000.0
 MAX_VELOCITY = 10.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
 SCALE = -787.4015
 FERROR = 1
 MIN_FERROR = .25
-HOME_OFFSET = 0.000000
+HOME = 0.0
+HOME_OFFSET = -1.1
 HOME_SEARCH_VEL = -10.00000
 HOME_LATCH_VEL = -2.0
-HOME_FINAL_VEL = 10.0
+HOME_FINAL_VEL = 8.0
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = -2
 
@@ -139,13 +178,11 @@ TYPE = LINEAR
 MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
-SCALE = 400.0
+SCALE = 400
 FERROR = 1
 MIN_FERROR = .25
-
 MIN_LIMIT = -0.0
 MAX_LIMIT = 160.0
-
 HOME = 155.0
 HOME_OFFSET = 160.0
 HOME_SEARCH_VEL = 15.0
@@ -156,20 +193,29 @@ HOME_SEQUENCE = 0
 
 [JOINT_3]
 TYPE = LINEAR
-HOME = 0.0
-HOME_OFFSET = -1.0
-MIN_LIMIT = -0.001
-MAX_LIMIT = 200.0
+MIN_LIMIT = -1.0
+MAX_LIMIT = 1000.0
 MAX_VELOCITY = 10.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
 SCALE = -787.4015
 FERROR = 1
 MIN_FERROR = .25
-HOME_OFFSET = 0.000000
+HOME = 0.0
+HOME_OFFSET = -1.0
 HOME_SEARCH_VEL = -10.00000
 HOME_LATCH_VEL = -2.0
-HOME_FINAL_VEL = 10.0
+HOME_FINAL_VEL = 8.0
 HOME_IGNORE_LIMITS = YES
 HOME_SEQUENCE = -2
 
+[SPINDLE_0]
+P = 0.0001
+I = 0.07
+D = 0
+FF0 = 1
+FF1 = 0
+FF2 = 0
+BIAS = 0
+DEADBAND = 0
+MAX_OUTPUT = 24000
