Disabled the REMAP=M6 which was slowing things down. Redo this later.

--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -57,8 +57,8 @@ CYCLE_TIME = 0.010
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
 SUBROUTINE_PATH = ~/linuxcnc/configs/Mill7i85s/subroutines/
-REMAP=M6   modalgroup=6  ngc=toolsetter
-ON_ABORT_COMMAND=O <on_abort> call
+#REMAP=M6   modalgroup=6  ngc=toolsetter
+#ON_ABORT_COMMAND=O <on_abort> call
 
 [EMCMOT]
 EMCMOT = motmod
@@ -70,7 +70,7 @@ SERVO_PERIOD = 1000000
 CARD0=hm2_7i92.0
 
 [HAL]
-TWOPASS = on,verbose
+TWOPASS = on
 HALUI = halui
 HALFILE = Mill7i85s.hal
 HALFILE = estop-chain.hal
@@ -118,7 +118,7 @@ ENCODER_SCALE = 200.0
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 31.25
 STEPGEN_MAXACCEL = 937.50
-P = 100.0
+P = 1000.0
 I = 1.0
 D = 0.0
 FF0 = 0.0
@@ -170,7 +170,7 @@ MAX_ACCELERATION = 750.0
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 31.25
 STEPGEN_MAXACCEL = 937.50
-P = 100.0
+P = 1000.0
 I = 1.0
 D = 0.0
 FF0 = 0.0
@@ -218,14 +218,14 @@ MAX_LIMIT = 419.0
 TYPE = LINEAR
 FERROR = 10.0
 MIN_FERROR = 1.0
-MAX_VELOCITY = 20.0
+MAX_VELOCITY = 15.0
 MAX_ACCELERATION = 200.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
-STEPGEN_MAXVEL = 20.0
-STEPGEN_MAXACCEL = 250.0
-P = 100.0
-I = 0.5
+STEPGEN_MAXVEL = 30.0
+STEPGEN_MAXACCEL = 400.0
+P = 1000.0
+I = 1.0
 D = 0.0
 FF0 = 0.0
 FF1 = 1.0
