--- a/router/router.ini
+++ b/router/router.ini
@@ -13,6 +13,7 @@ VERSION = 1.1
 #
 [DISPLAY]
 DISPLAY = gmoccapy
+#DISPLAY = axis
 EDITOR = nano
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
@@ -129,7 +130,7 @@ MAX_LIMIT = 700.0
 MAX_VELOCITY = 10.0
 MAX_ACCELERATION = 750.0
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1000.0
+MAX_LIMIT = 1500.0
 
 [AXIS_Z]
 MAX_VELOCITY = 20.0
@@ -158,7 +159,7 @@ HOME_SEQUENCE = 1
 [JOINT_1]
 TYPE = LINEAR
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1000.0
+MAX_LIMIT = 1500.0
 MAX_VELOCITY = 10.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
@@ -194,7 +195,7 @@ HOME_SEQUENCE = 0
 [JOINT_3]
 TYPE = LINEAR
 MIN_LIMIT = -1.0
-MAX_LIMIT = 1000.0
+MAX_LIMIT = 1500.0
 MAX_VELOCITY = 10.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
