Working toward probe screen on mill.

--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -4,8 +4,8 @@ DEBUG = 0
 VERSION = 1.1
 
 [DISPLAY]
-DISPLAY = axis
-PYVCP = pyvcp-panel.xml
+DISPLAY = gmoccapy
+#PYVCP = pyvcp-panel.xml
 
 #
 # Add Camera
@@ -13,7 +13,6 @@ PYVCP = pyvcp-panel.xml
 EMBED_TAB_NAME = Camera
 # Did not start. Warnings about python in 2.7???
 #EMBED_TAB_COMMAND = camview-emc  -w {XID}
-
 # Blank Camera tab
 #EMBED_TAB_COMMAND=halcmd loadusr qtvcp –push_xid cam_align
 #
