gmoccapy was working correctly with spindle connected to GS2. Need to switch to Emerson VFD.
Adds second parallel port for probe inputs.

--- a/router/router.ini
+++ b/router/router.ini
@@ -22,11 +22,11 @@ GRIDS = 10mm 20mm 50mm 100mm 1in 2in 5in 10in
 MAX_FEED_OVERRIDE = 1.2
 MIN_SPINDLE_OVERRIDE = 0.25
 MAX_SPINDLE_OVERRIDE = 1.0
-#DEFAULT_SPINDLE_SPEED = 3000.0
+DEFAULT_SPINDLE_SPEED = 20000.0
 
-DEFAULT_LINEAR_VELOCITY = 2.50
+DEFAULT_LINEAR_VELOCITY = 5.0
 MIN_LINEAR_VELOCITY = 0
-MAX_LINEAR_VELOCITY = 15.00
+MAX_LINEAR_VELOCITY = 40.00
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
@@ -43,24 +43,24 @@ EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -x {XID} -u p
 
 [TOOLSENSOR]
 # Absolute coordinates of the toolsetter pad 
-X = 10
-Y = 10
+X = 700
+Y = 1
 # Absolute Z start search coordinates
-Z = 60
+Z = 70
 # Maximum search distance and direction (sign)
 MAXPROBE = -60
 # Speed of movements during working in Probe Screen
-RAPID_SPEED = 600
+RAPID_SPEED = 900
 # Diameter of toolsetter pad 
 TS_DIAMETER = 10
 # The speed of the reverse rotation of the spindle when measuring the tool diameter
-REV_ROTATION_SPEED = 10
+REV_ROTATION_SPEED = 0
 
 [CHANGE_POSITION]
 # Abs coordinates tool change point
 X = 10
 Y = 10
-Z = 60
+Z = 90
 
 [PYTHON]
 PATH_PREPEND = ./python
@@ -74,8 +74,8 @@ JOINTS = 4
 COORDINATES = X Y Z Y
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
-DEFAULT_LINEAR_VELOCITY = 10
-MAX_LINEAR_VELOCITY = 15.0
+DEFAULT_LINEAR_VELOCITY = 30
+MAX_LINEAR_VELOCITY = 40.0
 DEFAULT_LINEAR_ACCELERATION = 500
 MAX_LINEAR_ACCELERATION = 500
 NO_FORCE_HOMING = 1
@@ -99,7 +99,6 @@ FEATURES=30
 SUBROUTINE_PATH = macros
 REMAP=M6   modalgroup=6  prolog=change_prolog   ngc=manual_change  epilog=change_epilog
 
-
 [EMCMOT]
 EMCMOT = motmod
 COMM_TIMEOUT = 1.0
@@ -107,9 +106,11 @@ BASE_PERIOD = 100000
 SERVO_PERIOD = 1000000
 
 [HAL]
+TWOPASS = on
 HALUI = halui
 HALFILE = router.hal
 HALFILE = custom.hal
+HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
 POSTGUI_HALFILE = postgui_call_list.hal
 
 [HALUI]
@@ -127,7 +128,7 @@ MIN_LIMIT = -0.001
 MAX_LIMIT = 700.0
 
 [AXIS_Y]
-MAX_VELOCITY = 10.0
+MAX_VELOCITY = 12.5
 MAX_ACCELERATION = 750.0
 MIN_LIMIT = -1.0
 MAX_LIMIT = 1500.0
@@ -136,7 +137,7 @@ MAX_LIMIT = 1500.0
 MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 150.0
 MIN_LIMIT = -0.0
-MAX_LIMIT = 160.0
+MAX_LIMIT = 200.0
 
 [JOINT_0]
 TYPE = LINEAR
@@ -150,11 +151,11 @@ FERROR = 1
 MIN_FERROR = .25
 HOME = 0.0
 HOME_OFFSET = -1.0
-HOME_SEARCH_VEL = -15.0
+HOME_SEARCH_VEL = -25.0
 HOME_LATCH_VEL = -2.0
-HOME_FINAL_VEL = 15.0
+HOME_FINAL_VEL = 25.0
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = 1
+HOME_SEQUENCE = 2
 
 [JOINT_1]
 TYPE = LINEAR
@@ -170,27 +171,27 @@ HOME = 0.0
 HOME_OFFSET = -1.1
 HOME_SEARCH_VEL = -10.00000
 HOME_LATCH_VEL = -2.0
-HOME_FINAL_VEL = 8.0
+HOME_FINAL_VEL = 10.0
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = -2
+HOME_SEQUENCE = -3
 
 [JOINT_2]
 TYPE = LINEAR
 MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 750.0
 STEPGEN_MAXACCEL = 937.5
-SCALE = 400
+SCALE = 500.0
 FERROR = 1
 MIN_FERROR = .25
 MIN_LIMIT = -0.0
-MAX_LIMIT = 160.0
-HOME = 155.0
-HOME_OFFSET = 160.0
-HOME_SEARCH_VEL = 15.0
+MAX_LIMIT = 200.0
+HOME = 195.0
+HOME_OFFSET = 200.0
+HOME_SEARCH_VEL = 20.0
 HOME_LATCH_VEL = -2.0
-HOME_FINAL_VEL = 15.0
+HOME_FINAL_VEL = 20.0
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = 0
+HOME_SEQUENCE = 1
 
 [JOINT_3]
 TYPE = LINEAR
@@ -206,9 +207,9 @@ HOME = 0.0
 HOME_OFFSET = -1.0
 HOME_SEARCH_VEL = -10.00000
 HOME_LATCH_VEL = -2.0
-HOME_FINAL_VEL = 8.0
+HOME_FINAL_VEL = 10.0
 HOME_IGNORE_LIMITS = YES
-HOME_SEQUENCE = -2
+HOME_SEQUENCE = -3
 
 [SPINDLE_0]
 P = 0.0001
