--- a/router/router.ini
+++ b/router/router.ini
@@ -109,9 +109,11 @@ SERVO_PERIOD = 1000000
 TWOPASS = on
 HALUI = halui
 HALFILE = router.hal
+HALFILE = estop-chain.hal
 HALFILE = custom.hal
 HALFILE = postgui_load.hal # file_with_all_loads_for_postgui.hal
 POSTGUI_HALFILE = postgui_call_list.hal
+#SHUTDOWN = shutdown.hal
 
 [HALUI]
 # add halui MDI commands here (max 64) 
