Add gmoccapy feedback for spindle and tool offset.

--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -5,9 +5,7 @@ VERSION = 1.1
 
 [DISPLAY]
 DISPLAY = gmoccapy
-EMBED_TAB_NAME=Probe Screen 
-EMBED_TAB_LOCATION = ntb_user_tabs
-EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -x {XID} -u python/probe_screen.py -H probe_icons/probe_screen.hal probe_icons/probe_screen.glade 
+
 
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
@@ -28,27 +26,54 @@ MIN_ANGULAR_VELOCITY = 1.666667
 EDITOR = nano
 GEOMETRY = xyz
 
-# Could use #INCLUDE probe_screen_v2.inc ??? for these sections.
+EMBED_TAB_NAME=Probe Screen 
+EMBED_TAB_LOCATION = ntb_user_tabs
+EMBED_TAB_COMMAND = gladevcp -x {XID} -u python/probe_screen.py probe_icons/probe_screen.glade
+
+# Could not get this to work. Empty screen.
+#EMBED_TAB_NAME=PSNG
+#EMBED_TAB_LOCATION = ntb_user_tabs
+#EMBED_TAB_COMMAND = gladevcp -c probe -x {XID} -u psng/python -H psng/psng.hal psng/psng.glade
+
+[PROBE_SCREEN]
+# Offset from [AXIS_Z]MAX_LIMIT for performing moves during various probe
+# screen movements. This must be a negative number.
+Z_SAFE_TRAVEL_OFFSET = -0.1
+
+#
+# https://github.com/verser-git/probe_screen_v2/blob/master/my-mill.ini
+#
 [TOOLSENSOR]
 # Absolute coordinates of the toolsetter pad 
 X = 325
 Y = 175
-# Absolute Z start search coordinates
-Z = 300
+Z = 375
 # Maximum search distance and direction (sign)
 MAXPROBE = -250
 # Speed of movements during working in Probe Screen
-RAPID_SPEED = 800
+#RAPID_SPEED = 800
 # Diameter of toolsetter pad 
-TS_DIAMETER = 10
+#TS_DIAMETER = 10
 # The speed of the reverse rotation of the spindle when measuring the tool diameter
-REV_ROTATION_SPEED = 0
+#REV_ROTATION_SPEED = 0
+RETRACT_HEIGHT = 1.5 
 
 [CHANGE_POSITION]
-# Abs coordinates tool change point
-X = 100
-Y = 100
-Z = 300
+# Absolute coordinates tool change position.
+X = 325
+Y = 175
+Z = 375
+
+[RS274NGC]
+PARAMETER_FILE = linuxcnc.var
+FEATURES = 12
+SUBROUTINE_PATH = macros
+REMAP=M6    modalgroup=6 prolog=change_prolog  ngc=tool-change  epilog=change_prolog
+#RETAIN_G43 = 0
+#INI_VARS = 1
+#HAL_PIN_VARS = 1
+#SUBROUTINE_PATH = macros:psng/macros
+#REMAP=M6   modalgroup=6  prolog=change_prolog   ngc=psng_manual_change  epilog=change_epilog
 
 [PYTHON]
 PATH_PREPEND = ./python
@@ -66,11 +91,6 @@ py = python
 TASK = milltask
 CYCLE_TIME = 0.010
 
-[RS274NGC]
-PARAMETER_FILE = linuxcnc.var
-FEATURES=30
-SUBROUTINE_PATH = macros
-REMAP=M6   modalgroup=6  prolog=change_prolog   ngc=manual_change  epilog=change_epilog
 
 [EMCMOT]
 EMCMOT = motmod
@@ -111,6 +131,10 @@ POSITION_FILE = position.txt
 EMCIO = io
 CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
+#
+# Added for PrintNC method of tool change.
+#
+TOOL_CHANGE_AT_G30 = 0
 
 #******************************************
 [AXIS_X]
@@ -170,7 +194,7 @@ HOME_SEQUENCE = 1
 MAX_VELOCITY = 25.0
 MAX_ACCELERATION = 750.0
 MIN_LIMIT = -0.1
-MAX_LIMIT = 177.5
+MAX_LIMIT = 176.9
 
 [JOINT_1]
 TYPE = LINEAR
@@ -204,14 +228,14 @@ TURNS_PER_MM = 1/5
 STEP_SCALE = -200.0
 
 MIN_LIMIT = -0.1
-MAX_LIMIT = 177.5
+MAX_LIMIT = 176.9
 
 HOME_SEARCH_VEL = 12.0
 HOME_LATCH_VEL = 1.0
 HOME_FINAL_VEL = 12.0
 HOME_IGNORE_LIMITS = YES
 HOME_USE_INDEX = NO
-HOME_OFFSET = 177.000000
+HOME_OFFSET = 176.9
 HOME = 167.0
 HOME_IS_SHARED = YES
 #HOME_ABSOLUTE_ENCODER = NO
