Y axis encoder replaced. Add messages.
Screwing around with Y feedback. (not right in these files)

--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -34,6 +34,39 @@ EMBED_TAB_COMMAND = gladevcp -x {XID} -u python/probe_screen.py probe_icons/prob
 #EMBED_TAB_LOCATION = ntb_user_tabs
 #EMBED_TAB_COMMAND = gladevcp -c probe -x {XID} -u psng/python -H psng/psng.hal psng/psng.glade
 
+#
+# User Created Message HAL Pins.
+#
+MESSAGE_BOLDTEXT = Driver EStop bold text
+MESSAGE_TEXT = Driver Estop text
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = driver-estop
+
+MESSAGE_BOLDTEXT = OverTravel EStop bold text
+MESSAGE_TEXT = OverTravel EStop text
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = length-estop
+
+MESSAGE_BOLDTEXT = x Quadrature Estop bold text
+MESSAGE_TEXT = x Quadrature Estop text
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = x-encoder-estop
+
+MESSAGE_BOLDTEXT = y Quadrature Estop bold text
+MESSAGE_TEXT = y Quadrature Estop  text
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = y-encoder-estop
+
+MESSAGE_BOLDTEXT = z Quadrature Estop  bold text
+MESSAGE_TEXT = z Quadrature Estop  text
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME =  z-encoder-estop
+
+MESSAGE_BOLDTEXT = Spindle Quadrature Estop  bold text
+MESSAGE_TEXT = Spindle Quadrature Estop text
+MESSAGE_TYPE = okdialog
+MESSAGE_PINNAME = s-encoder-estop
+
 [PROBE_SCREEN]
 # Offset from [AXIS_Z]MAX_LIMIT for performing moves during various probe
 # screen movements. This must be a negative number.
@@ -137,24 +170,24 @@ TOOL_CHANGE_AT_G30 = 0
 
 #******************************************
 [AXIS_X]
-MAX_VELOCITY = 25.0
-MAX_ACCELERATION = 750.0
+MAX_VELOCITY = 20.0
+MAX_ACCELERATION = 250.0
 MIN_LIMIT = 0.0
 MAX_LIMIT = 419.0
 
 [JOINT_0]
 TYPE = LINEAR
-FERROR = 10.0
-MIN_FERROR = 1.0
-MAX_VELOCITY = 25.0
-MAX_ACCELERATION = 750.0
+FERROR = 1.0
+MIN_FERROR = 0.1
+MAX_VELOCITY = 20.0
+MAX_ACCELERATION = 250.0
 ENCODER_SCALE = 200.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 31.25
 STEPGEN_MAXACCEL = 937.50
-P = 1000.0
-I = 1.0
+P = 300.0
+I = 1.25
 D = 0.0
 FF0 = 0.0
 FF1 = 1.0
@@ -167,11 +200,10 @@ DIRSETUP   = 10000
 DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
-STEPS_PER_REV = 1000
-TURNS_PER_MM = 1/5
+
+#STEPS_PER_REV = 1000
+#TURNS_PER_MM = 1/5
 STEP_SCALE = 200.0 
-#STEPS_PER_REV*TURNS_PER_MM
-#STEP_SCALE = 200.0
 MIN_LIMIT = -0.1
 MAX_LIMIT = 419.0
 
@@ -181,8 +213,8 @@ HOME_FINAL_VEL = +12.0
 HOME_IGNORE_LIMITS = YES
 HOME_USE_INDEX = NO
 HOME_OFFSET = 0.000000
-HOME = 0.0
-HOME_IS_SHARED = YES
+HOME = 10.0
+HOME_IS_SHARED = NO
 #HOME_ABSOLUTE_ENCODER = NO
 HOME_SEQUENCE = 1
 #VOLATILE_HOME = NO
@@ -190,22 +222,25 @@ HOME_SEQUENCE = 1
 
 #******************************************
 [AXIS_Y]
-MAX_VELOCITY = 25.0
-MAX_ACCELERATION = 750.0
+MAX_VELOCITY = 20.0
+MAX_ACCELERATION = 250.0
 MIN_LIMIT = -0.1
 MAX_LIMIT = 180.0
 
 [JOINT_1]
 TYPE = LINEAR
-FERROR = 10.0
-MIN_FERROR = 1.0
-MAX_VELOCITY = 25.0
-MAX_ACCELERATION = 750.0
+FERROR = 2.0
+MIN_FERROR = 2.0
+MAX_VELOCITY = 20.0
+MAX_ACCELERATION = 250.0
+
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
-# If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
-STEPGEN_MAXVEL = 31.25
-STEPGEN_MAXACCEL = 937.50
-P = 1000.0
+STEPGEN_MAXVEL = 30
+STEPGEN_MAXACCEL = 300
+#
+# For a closed loop stepper. Use P=1000, FF1=1.0. If you close this inside another loop (with encoder) you will need to adjust.
+#
+P = 300.0
 I = 1.0
 D = 0.0
 FF0 = 0.0
@@ -214,29 +249,33 @@ FF2 = 0.0
 BIAS = 0.0
 DEADBAND = 0.010
 MAX_OUTPUT = 0.0
-ENCODER_SCALE = 200.0
+ENCODER_SCALE = +1000.0
 # these are in nanoseconds
 DIRSETUP   = 10000
 DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 
-STEPS_PER_REV = 1000
-TURNS_PER_MM = 1/5
-#STEPS_PER_REV*TURNS_PER_MM
+#STEPS_PER_REV = 1000
+#TURNS_PER_MM = 1/5
 STEP_SCALE = -200.0
 
 MIN_LIMIT = -0.1
 MAX_LIMIT = 180.0
 
 HOME_SEARCH_VEL = 12.0
-HOME_LATCH_VEL = 1.0
+HOME_LATCH_VEL = -1.0
 HOME_FINAL_VEL = 12.0
 HOME_IGNORE_LIMITS = YES
-HOME_USE_INDEX = NO
+
+
+#HOME_USE_INDEX = YES
+HOME_USE_INDEX = NO # Disable for AT_PID.
+
+
 HOME_OFFSET = 180.0
-HOME = 175.0
-HOME_IS_SHARED = YES
+HOME = 150.0
+HOME_IS_SHARED = NO
 #HOME_ABSOLUTE_ENCODER = NO
 HOME_SEQUENCE = 1
 #VOLATILE_HOME = NO
@@ -251,16 +290,16 @@ MAX_LIMIT = 419.0
 
 [JOINT_2]
 TYPE = LINEAR
-FERROR = 10.0
-MIN_FERROR = 1.0
+FERROR = 1.0
+MIN_FERROR = 0.1
 MAX_VELOCITY = 15.0
 MAX_ACCELERATION = 200.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 30.0
 STEPGEN_MAXACCEL = 400.0
-P = 1000.0
-I = 1.0
+P = 350.0
+I = 1.5
 D = 0.0
 FF0 = 0.0
 FF1 = 1.0
@@ -275,7 +314,7 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 # In addition to the gearing inside the knee which requires 10 turns of the screw for 1" of travel.
-# This mill uses a belted drive system with a 20T gear on motor and 50T gear on shaft.
+# This mill uses a belted drive system with a 17T gear on motor and 53T gear on shaft.
 GEAR_MOTOR_TEETH = 17
 GEAR_SHAFT_TEETH = 53
 STEPS_PER_REV = 800
@@ -292,7 +331,7 @@ HOME_IGNORE_LIMITS = YES
 HOME_USE_INDEX = NO
 HOME_OFFSET = 418.000000
 HOME = 410.0
-HOME_IS_SHARED = YES
+HOME_IS_SHARED = NO
 #HOME_ABSOLUTE_ENCODER = NO
 HOME_SEQUENCE = 0
 #VOLATILE_HOME = NO
