Adjusted the Y parameters to avoid oscillations during home. Adjusted the steps/revolution trying to get more resolution.

--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -229,8 +229,8 @@ MAX_LIMIT = 180.0
 
 [JOINT_1]
 TYPE = LINEAR
-FERROR = 2.0
-MIN_FERROR = 2.0
+FERROR = 1.0
+MIN_FERROR = 0.5
 MAX_VELOCITY = 20.0
 MAX_ACCELERATION = 250.0
 
@@ -238,17 +238,19 @@ MAX_ACCELERATION = 250.0
 STEPGEN_MAXVEL = 30
 STEPGEN_MAXACCEL = 300
 #
-# For a closed loop stepper. Use P=1000, FF1=1.0. If you close this inside another loop (with encoder) you will need to adjust.
+# For a closed loop stepper. Use P=1000, FF1=1.0. 
+# Closed the loop with magnetic scale, so different parameters are required.
 #
-P = 300.0
-I = 1.0
+P = 150
+I = 1.25
 D = 0.0
 FF0 = 0.0
-FF1 = 1.0
+FF1 = 0.65
 FF2 = 0.0
 BIAS = 0.0
 DEADBAND = 0.010
 MAX_OUTPUT = 0.0
+
 ENCODER_SCALE = +1000.0
 # these are in nanoseconds
 DIRSETUP   = 10000
@@ -256,9 +258,9 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 
-#STEPS_PER_REV = 1000
+#STEPS_PER_REV = 2000 Y is using more steps than X (to take better advantage of 1um magnetic encoder)
 #TURNS_PER_MM = 1/5
-STEP_SCALE = -200.0
+STEP_SCALE = -400.0
 
 MIN_LIMIT = -0.1
 MAX_LIMIT = 180.0
@@ -267,12 +269,7 @@ HOME_SEARCH_VEL = 12.0
 HOME_LATCH_VEL = -1.0
 HOME_FINAL_VEL = 12.0
 HOME_IGNORE_LIMITS = YES
-
-
-#HOME_USE_INDEX = YES
-HOME_USE_INDEX = NO # Disable for AT_PID.
-
-
+HOME_USE_INDEX = YES
 HOME_OFFSET = 180.0
 HOME = 150.0
 HOME_IS_SHARED = NO
