--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -13,14 +13,8 @@ DISPLAY = axis
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 1.500000
-
-DEFAULT_SPINDLE_0_SPEED 200.0
-MIN_SPINDLE_0_SPEED 80.0
-MAX_SPINDLE_0_SPEED 1000.0
-
 MAX_SPINDLE_OVERRIDE = 1.500000
 MIN_SPINDLE_OVERRIDE = 0.500000
-
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
@@ -39,8 +33,8 @@ PYVCP = custompanel.xml
 #
 # Lathe Macros.
 #
-#EMBED_TAB_NAME=Cycles
-#EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -u lathehandler.py -x {XID} lathemacro.ui
+EMBED_TAB_NAME=Cycles
+EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -u lathehandler.py -x {XID} lathemacro.ui
 
 
 [FILTER]
@@ -129,7 +123,7 @@ STEPSPACE  = 5000
 STEP_SCALE = 1000.0
 MIN_LIMIT = -100.0
 MAX_LIMIT = 200.0
-#HOME = 0.0
+HOME = 0.0
 HOME_OFFSET = 0.0
 HOME_SEARCH_VELOCITY = 0.0
 HOME_LATCH_VELOCITY = 0.0
@@ -173,7 +167,7 @@ STEPSPACE  = 5000
 STEP_SCALE = 400.0
 MIN_LIMIT = -100.0
 MAX_LIMIT = 300.0
-#HOME = 0.0
+HOME = 0.0
 HOME_OFFSET = 0.0
 HOME_SEARCH_VELOCITY = 0.0
 HOME_LATCH_VELOCITY = 0.0
