--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -9,16 +9,20 @@ DEBUG = 0
 VERSION = 1.1
 
 [DISPLAY]
-DISPLAY = axis
+DISPLAY = gmoccapy
+EMBED_TAB_NAME = Center_panel
+EMBED_TAB_LOCATION = ntb_preview
+EMBED_TAB_COMMAND = gladevcp -c gladevcp  -H gvcp_call_list.hal -x {XID} gvcp-panel.ui
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 1.500000
-MAX_SPINDLE_OVERRIDE = 1.500000
+MAX_SPINDLE_OVERRIDE = 1.000000
 MIN_SPINDLE_OVERRIDE = 0.500000
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
 INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
+LATHE = 1
 POSITION_FEEDBACK = ACTUAL
 DEFAULT_LINEAR_VELOCITY = 6.000000
 MAX_LINEAR_VELOCITY = 25.000000
@@ -26,16 +30,23 @@ MIN_LINEAR_VELOCITY = 0.500000
 DEFAULT_ANGULAR_VELOCITY = 12.000000
 MAX_ANGULAR_VELOCITY = 180.000000
 MIN_ANGULAR_VELOCITY = 1.666667
-EDITOR = nano
-LATHE = 1
+EDITOR = gedit
 GEOMETRY = xz
-PYVCP = custompanel.xml
+CYCLE_TIME = 100
+DEFAULT_SPINDLE_SPEED = 200
+DEFAULT_SPINDLE_0_SPEED = 200
+MIN_SPINDLE_0_SPEED = 80
+MAX_SPINDLE_0_SPEED = 1000
+MIN_SPINDLE_0_OVERRIDE = 0.25
+MAX_SPINDLE_0_OVERRIDE = 1.25
+
+#PYVCP = custompanel.xml
+
 #
 # Lathe Macros.
 #
 EMBED_TAB_NAME=Cycles
 EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -u lathehandler.py -x {XID} lathemacro.ui
-
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -106,7 +117,7 @@ MAX_ACCELERATION = 750.0
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 31.25
 STEPGEN_MAXACCEL = 937.50
-P = 500.0
+P = 1000.0
 I = 1.0
 D = 0.0
 FF0 = 0.0
@@ -123,7 +134,7 @@ STEPSPACE  = 5000
 STEP_SCALE = 1000.0
 MIN_LIMIT = -100.0
 MAX_LIMIT = 200.0
-HOME = 0.0
+#HOME = 0.0
 HOME_OFFSET = 0.0
 HOME_SEARCH_VELOCITY = 0.0
 HOME_LATCH_VELOCITY = 0.0
@@ -167,11 +178,11 @@ STEPSPACE  = 5000
 STEP_SCALE = 400.0
 MIN_LIMIT = -100.0
 MAX_LIMIT = 300.0
-HOME = 0.0
+#HOME = 0.0
 HOME_OFFSET = 0.0
 HOME_SEARCH_VELOCITY = 0.0
 HOME_LATCH_VELOCITY = 0.0
-HOME_INITIAL_VELOCITY = 0.0
+HsOME_INITIAL_VELOCITY = 0.0
 HOME_FINAL_VELOCITY = 0.0
 HOME_IGNORE_LIMTS = 1
 HOME_SEQUENCE = 0
