--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -77,7 +77,7 @@ CARD0=hm2_7i96.0
 [HAL]
 HALUI = halui
 HALFILE = latheMesa.hal
-HALFILE = spindle.hal
+HALFILE = LatheSpindle.hal
 HALFILE = custom.hal
 POSTGUI_HALFILE = postgui_call_list.hal
 SHUTDOWN = shutdown.hal
@@ -187,3 +187,19 @@ HsOME_INITIAL_VELOCITY = 0.0
 HOME_FINAL_VELOCITY = 0.0
 HOME_IGNORE_LIMTS = 1
 HOME_SEQUENCE = 0
+
+[SPINDLE_0]
+P = 0.0
+I = 0.0
+D = 0.0
+FF0 = 1.0
+FF1 = 0.0
+FF2 = 0.0
+BIAS = 0.0
+DEADBAND = 0.0
+MAX_OUTPUT = 2000.0
+OUTPUT_SCALE = 2000
+OUTPUT_MIN_LIMIT = -2000
+OUTPUT_MAX_LIMIT = 2000
+
+ENCODER_SCALE = 260.0
