--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -75,6 +75,7 @@ SERVO_PERIOD = 1000000
 CARD0=hm2_7i96.0
 
 [HAL]
+TWOPASS = on
 HALUI = halui
 HALFILE = latheMesa.hal
 HALFILE = LatheSpindle.hal
