Implement estop chain.

--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -79,6 +79,7 @@ TWOPASS = on
 HALUI = halui
 HALFILE = latheMesa.hal
 HALFILE = LatheSpindle.hal
+HALFILE = estop-chain.hal
 HALFILE = custom.hal
 POSTGUI_HALFILE = postgui_call_list.hal
 SHUTDOWN = shutdown.hal
