--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -106,22 +106,23 @@ TOOL_TABLE = tool.tbl
 [AXIS_X]
 MAX_VELOCITY = 25.0
 MAX_ACCELERATION = 750.0
-MIN_LIMIT = -100.0
-MAX_LIMIT = 200.0
+MIN_LIMIT = 0.0
+MAX_LIMIT = 105.0
 
 [JOINT_0]
 TYPE = LINEAR
-HOME = 0.0
 FERROR = 10.0
 MIN_FERROR = 1.0
 MAX_VELOCITY = 25.0
 MAX_ACCELERATION = 750.0
+MIN_LIMIT = 0.0
+MAX_LIMIT = 105.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 31.25
 STEPGEN_MAXACCEL = 937.50
-P = 1000.0
-I = 1.0
+P = 100.0
+I = 0.0
 D = 0.0
 FF0 = 0.0
 FF1 = 1.0
@@ -135,16 +136,24 @@ DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
 STEP_SCALE = 1000.0
-MIN_LIMIT = -100.0
-MAX_LIMIT = 200.0
-#HOME = 0.0
-HOME_OFFSET = 0.0
-HOME_SEARCH_VELOCITY = 0.0
-HOME_LATCH_VELOCITY = 0.0
-HOME_INITIAL_VELOCITY = 0.0
-HOME_FINAL_VELOCITY = 0.0
-HOME_IGNORE_LIMTS = 1
-HOME_SEQUENCE = 0
+ENCODER_SCALE = 1000.0
+
+#
+# Home setup.
+#
+HOME_SEARCH_VEL = 5.000000
+HOME_LATCH_VEL = -0.050000
+HOME_FINAL_VEL = 0.200000
+HOME_IGNORE_LIMITS = YES
+HOME_USE_INDEX = YES
+#HOME_INDEX_NO_ENCODER_RESET
+HOME_OFFSET = 104.0
+HOME = 100.0
+HOME_IS_SHARED = 0
+#HOME_ABSOLUTE_ENCODER = NO
+HOME_SEQUENCE = 1
+#VOLATILE_HOME = NO
+#LOCKING_INDEXER = NO
 
 #******************************************
 [AXIS_Z]
@@ -181,14 +190,22 @@ STEPSPACE  = 5000
 STEP_SCALE = 400.0
 MIN_LIMIT = -100.0
 MAX_LIMIT = 300.0
-#HOME = 0.0
+#
+# Home setup.
+#
+HOME_SEARCH_VEL = 0.0
+HOME_LATCH_VEL =  0.0
+HOME_FINAL_VEL =  0.0
+HOME_IGNORE_LIMTS = YES
+HOME_USE_INDEX = NO
+#HOME_INDEX_NO_ENCODER_RESET
 HOME_OFFSET = 0.0
-HOME_SEARCH_VELOCITY = 0.0
-HOME_LATCH_VELOCITY = 0.0
-HsOME_INITIAL_VELOCITY = 0.0
-HOME_FINAL_VELOCITY = 0.0
-HOME_IGNORE_LIMTS = 1
+HOME = 0.0
+HOME_IS_SHARED = NO
+#HOME_ABSOLUTE_ENCODER = NO
 HOME_SEQUENCE = 0
+#VOLATILE_HOME = NO
+#LOCKING_INDEXER = NO
 
 [SPINDLE_0]
 P = 0.0
