--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -16,8 +16,8 @@ EMBED_TAB_COMMAND = gladevcp -c gladevcp  -H gvcp_call_list.hal -x {XID} gvcp-pa
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 1.500000
-MAX_SPINDLE_OVERRIDE = 1.000000
-MIN_SPINDLE_OVERRIDE = 0.500000
+MAX_SPINDLE_OVERRIDE = 1.25
+MIN_SPINDLE_OVERRIDE = 0.25
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 PROGRAM_PREFIX = /home/cncbox/linuxcnc/nc_files
@@ -115,8 +115,6 @@ FERROR = 10.0
 MIN_FERROR = 1.0
 MAX_VELOCITY = 25.0
 MAX_ACCELERATION = 750.0
-MIN_LIMIT = 0.0
-MAX_LIMIT = 105.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 31.25
@@ -128,7 +126,7 @@ FF0 = 0.0
 FF1 = 1.0
 FF2 = 0.0
 BIAS = 0.0
-DEADBAND = 0.010
+DEADBAND = 0.005
 MAX_OUTPUT = 0.0
 # these are in nanoseconds
 DIRSETUP   = 10000
@@ -138,17 +136,23 @@ STEPSPACE  = 5000
 STEP_SCALE = 1000.0
 ENCODER_SCALE = 1000.0
 
+MIN_LIMIT = 0.0
+MAX_LIMIT = 105.0
+HOME_OFFSET = 104.0
+HOME = 100.0
+
 #
 # Home setup.
 #
-HOME_SEARCH_VEL = 5.000000
-HOME_LATCH_VEL = -0.050000
-HOME_FINAL_VEL = 0.200000
+HOME_SEARCH_VEL = 10.0
+HOME_LATCH_VEL = -1.00000
+HOME_FINAL_VEL = 3.0
 HOME_IGNORE_LIMITS = YES
 HOME_USE_INDEX = YES
-#HOME_INDEX_NO_ENCODER_RESET
-HOME_OFFSET = 104.0
-HOME = 100.0
+#
+# This is required if you don't use the encoder for x-pos-fb.
+#
+#HOME_INDEX_NO_ENCODER_RESET = YES
 HOME_IS_SHARED = 0
 #HOME_ABSOLUTE_ENCODER = NO
 HOME_SEQUENCE = 1
@@ -208,17 +212,17 @@ HOME_SEQUENCE = 0
 #LOCKING_INDEXER = NO
 
 [SPINDLE_0]
-P = 0.0
-I = 0.0
+P = 1.5
+I = 0.015
 D = 0.0
 FF0 = 1.0
 FF1 = 0.0
 FF2 = 0.0
 BIAS = 0.0
 DEADBAND = 0.0
-MAX_OUTPUT = 2000.0
+MAX_OUTPUT = 1000.0
 OUTPUT_SCALE = 2000
-OUTPUT_MIN_LIMIT = -2000
-OUTPUT_MAX_LIMIT = 2000
+OUTPUT_MIN_LIMIT = -1000
+OUTPUT_MAX_LIMIT = 1000
 
 ENCODER_SCALE = 260.0
