--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -10,9 +10,19 @@ VERSION = 1.1
 
 [DISPLAY]
 DISPLAY = gmoccapy
+
 EMBED_TAB_NAME = Center_panel
 EMBED_TAB_LOCATION = ntb_preview
 EMBED_TAB_COMMAND = gladevcp -c gladevcp  -H gvcp_call_list.hal -x {XID} gvcp-panel.ui
+#
+# Lathe Macros.
+#
+EMBED_TAB_NAME=LatheMacros
+EMBED_TAB_LOCATION = ntb_preview
+EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -U notouch=1 -U norun=0 -u lathehandler.py -x {XID} lathemacro.ui
+
+PREFERENCE_FILE_PATH = gmoccapy.preferences
+
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 1.500000
@@ -33,20 +43,15 @@ MIN_ANGULAR_VELOCITY = 1.666667
 EDITOR = gedit
 GEOMETRY = xz
 CYCLE_TIME = 100
-DEFAULT_SPINDLE_SPEED = 200
-DEFAULT_SPINDLE_0_SPEED = 200
+DEFAULT_SPINDLE_SPEED = 300
+DEFAULT_SPINDLE_0_SPEED = 300
 MIN_SPINDLE_0_SPEED = 80
-MAX_SPINDLE_0_SPEED = 1000
+MAX_SPINDLE_0_SPEED = 800
 MIN_SPINDLE_0_OVERRIDE = 0.25
 MAX_SPINDLE_0_OVERRIDE = 1.25
 
 #PYVCP = custompanel.xml
 
-#
-# Lathe Macros.
-#
-EMBED_TAB_NAME=Cycles
-EMBED_TAB_COMMAND=halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -u lathehandler.py -x {XID} lathemacro.ui
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -118,23 +123,23 @@ MAX_ACCELERATION = 750.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 31.25
-STEPGEN_MAXACCEL = 937.50
-P = 100.0
-I = 0.0
-D = 0.0
-FF0 = 0.0
-FF1 = 1.0
-FF2 = 0.0
-BIAS = 0.0
-DEADBAND = 0.005
-MAX_OUTPUT = 0.0
+STEPGEN_MAXACCEL = 937.5
+P = 100
+I = 0
+D = 0
+FF0 = 0
+FF1 = 1
+FF2 = 0
+BIAS = 0
+DEADBAND = 0
+MAX_OUTPUT = 0
 # these are in nanoseconds
 DIRSETUP   = 10000
 DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
-STEP_SCALE = 1000.0
-ENCODER_SCALE = 1000.0
+STEP_SCALE = 1000
+ENCODER_SCALE = 1000
 
 MIN_LIMIT = 0.0
 MAX_LIMIT = 105.0
@@ -176,22 +181,22 @@ MAX_ACCELERATION = 500.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
 STEPGEN_MAXVEL = 31.25
-STEPGEN_MAXACCEL = 937.50
-P = 500.0
-I = 1.0
-D = 0.0
-FF0 = 0.0
-FF1 = 1.0
-FF2 = 0.0
-BIAS = 0.0
-DEADBAND = 0.010
-MAX_OUTPUT = 0.0
+STEPGEN_MAXACCEL = 937.5
+P = 500
+I = 1
+D = 0
+FF0 = 0
+FF1 = 1
+FF2 = 0
+BIAS = 0
+DEADBAND = 0.01
+MAX_OUTPUT = 0
 # these are in nanoseconds
 DIRSETUP   = 10000
 DIRHOLD    = 10000
 STEPLEN    = 5000
 STEPSPACE  = 5000
-STEP_SCALE = 400.0
+STEP_SCALE = 400
 MIN_LIMIT = -100.0
 MAX_LIMIT = 300.0
 #
@@ -225,4 +230,4 @@ OUTPUT_SCALE = 2000
 OUTPUT_MIN_LIMIT = -1000
 OUTPUT_MAX_LIMIT = 1000
 
-ENCODER_SCALE = 260.0
+ENCODER_SCALE = 260
