Implement gmoccapy feedback signals. Fix spindle-cw-override polarity, expand spindle near scale.

--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -40,9 +40,10 @@ MIN_LINEAR_VELOCITY = 0.500000
 DEFAULT_ANGULAR_VELOCITY = 12.000000
 MAX_ANGULAR_VELOCITY = 180.000000
 MIN_ANGULAR_VELOCITY = 1.666667
-EDITOR = gedit
+EDITOR = nano
 GEOMETRY = xz
 CYCLE_TIME = 100
+
 DEFAULT_SPINDLE_SPEED = 300
 DEFAULT_SPINDLE_0_SPEED = 300
 MIN_SPINDLE_0_SPEED = 80
@@ -51,7 +52,6 @@ MIN_SPINDLE_0_OVERRIDE = 0.25
 MAX_SPINDLE_0_OVERRIDE = 1.25
 
 #PYVCP = custompanel.xml
-
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -154,9 +154,6 @@ HOME_LATCH_VEL = -1.00000
 HOME_FINAL_VEL = 3.0
 HOME_IGNORE_LIMITS = YES
 HOME_USE_INDEX = YES
-#
-# This is required if you don't use the encoder for x-pos-fb.
-#
 #HOME_INDEX_NO_ENCODER_RESET = YES
 HOME_IS_SHARED = 0
 #HOME_ABSOLUTE_ENCODER = NO
@@ -217,15 +214,15 @@ HOME_SEQUENCE = 0
 #LOCKING_INDEXER = NO
 
 [SPINDLE_0]
-P = 1.5
-I = 0.015
-D = 0.0
-FF0 = 1.0
-FF1 = 0.0
-FF2 = 0.0
-BIAS = 0.0
-DEADBAND = 0.0
-MAX_OUTPUT = 1000.0
+P = 1.25
+I = 0.05
+D = 0
+FF0 = 1
+FF1 = 0
+FF2 = 0
+BIAS = 0
+DEADBAND = 0
+MAX_OUTPUT = 1000
 OUTPUT_SCALE = 2000
 OUTPUT_MIN_LIMIT = -1000
 OUTPUT_MAX_LIMIT = 1000
