--- a/latheMesa/latheMesa.ini
+++ b/latheMesa/latheMesa.ini
@@ -14,6 +14,9 @@ DISPLAY = gmoccapy
 EMBED_TAB_NAME = Center_panel
 EMBED_TAB_LOCATION = ntb_preview
 EMBED_TAB_COMMAND = gladevcp -c gladevcp  -H gvcp_call_list.hal -x {XID} gvcp-panel.ui
+#EMBED_TAB_NAME = DRO
+#EMBED_TAB_LOCATION = ntb_user_tabs
+#EMBED_TAB_COMMAND = gladevcp -x {XID} dro.glade
 #
 # Lathe Macros.
 #
@@ -35,7 +38,7 @@ INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
 LATHE = 1
 POSITION_FEEDBACK = ACTUAL
 DEFAULT_LINEAR_VELOCITY = 6.000000
-MAX_LINEAR_VELOCITY = 25.000000
+MAX_LINEAR_VELOCITY = 12.000000
 MIN_LINEAR_VELOCITY = 0.500000
 DEFAULT_ANGULAR_VELOCITY = 12.000000
 MAX_ANGULAR_VELOCITY = 180.000000
@@ -100,7 +103,7 @@ COORDINATES =  XZ
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
 DEFAULT_LINEAR_VELOCITY = 2.50
-MAX_LINEAR_VELOCITY = 25.00
+MAX_LINEAR_VELOCITY = 12.00
 
 [EMCIO]
 EMCIO = io
@@ -109,7 +112,7 @@ TOOL_TABLE = tool.tbl
 
 #******************************************
 [AXIS_X]
-MAX_VELOCITY = 25.0
+MAX_VELOCITY = 12.0
 MAX_ACCELERATION = 750.0
 MIN_LIMIT = 0.0
 MAX_LIMIT = 105.0
@@ -118,7 +121,7 @@ MAX_LIMIT = 105.0
 TYPE = LINEAR
 FERROR = 10.0
 MIN_FERROR = 1.0
-MAX_VELOCITY = 25.0
+MAX_VELOCITY = 12.0
 MAX_ACCELERATION = 750.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
@@ -149,9 +152,9 @@ HOME = 100.0
 #
 # Home setup.
 #
-HOME_SEARCH_VEL = 10.0
+HOME_SEARCH_VEL = 15.0
 HOME_LATCH_VEL = -1.00000
-HOME_FINAL_VEL = 3.0
+HOME_FINAL_VEL = 5.0
 HOME_IGNORE_LIMITS = YES
 HOME_USE_INDEX = YES
 #HOME_INDEX_NO_ENCODER_RESET = YES
@@ -163,7 +166,7 @@ HOME_SEQUENCE = 1
 
 #******************************************
 [AXIS_Z]
-MAX_VELOCITY = 25.0
+MAX_VELOCITY = 12.0
 MAX_ACCELERATION = 500.0
 MIN_LIMIT = -100.0
 MAX_LIMIT = 300.0
@@ -173,7 +176,7 @@ TYPE = LINEAR
 HOME = 0.0
 FERROR = 10.0
 MIN_FERROR = 1.0
-MAX_VELOCITY = 35.0
+MAX_VELOCITY = 12.0
 MAX_ACCELERATION = 500.0
 # The values below should be 25% larger than MAX_VELOCITY and MAX_ACCELERATION
 # If using BACKLASH compensation STEPGEN_MAXACCEL should be 100% larger.
