Added load percentage to gmoccapy gui.

--- a/Mill7i85s/Mill7i85s.ini
+++ b/Mill7i85s/Mill7i85s.ini
@@ -8,7 +8,6 @@ DISPLAY = gmoccapy
 
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
-
 MAX_FEED_OVERRIDE = 1.5
 MAX_SPINDLE_OVERRIDE = 1.500000
 MIN_SPINDLE_OVERRIDE = 0.500000
@@ -24,15 +23,29 @@ MAX_ANGULAR_VELOCITY = 180.000000
 MIN_ANGULAR_VELOCITY = 1.666667
 EDITOR = nano
 GEOMETRY = xyz
+CYCLE_TIME = 150
 
-EMBED_TAB_NAME=Probe Screen 
-EMBED_TAB_LOCATION = ntb_user_tabs
-EMBED_TAB_COMMAND = gladevcp -x {XID} -u python/probe_screen.py probe_icons/probe_screen.glade
+#EMBED_TAB_NAME=Probe Screen 
+#EMBED_TAB_LOCATION = ntb_user_tabs
+#EMBED_TAB_COMMAND = gladevcp -x {XID} -u python/probe_screen.py probe_icons/probe_screen.glade
 
 # Could not get this to work. Empty screen.
 #EMBED_TAB_NAME=PSNG
 #EMBED_TAB_LOCATION = ntb_user_tabs
 #EMBED_TAB_COMMAND = gladevcp -c probe -x {XID} -u psng/python -H psng/psng.hal psng/psng.glade
+
+EMBED_TAB_NAME = Spindle_load
+EMBED_TAB_LOCATION = box_custom_4
+EMBED_TAB_COMMAND = gladevcp -x {XID} -H ./connect-glade-pins.hal ./spindle_load.glade
+
+PREFERENCE_FILE_PATH = gmoccapy.preferences
+
+DEFAULT_SPINDLE_SPEED = 400
+DEFAULT_SPINDLE_0_SPEED = 400
+MIN_SPINDLE_0_SPEED = 80
+MAX_SPINDLE_0_SPEED = 1500
+MIN_SPINDLE_0_OVERRIDE = 0.25
+MAX_SPINDLE_0_OVERRIDE = 1.25
 
 #
 # User Created Message HAL Pins.
@@ -100,7 +113,8 @@ Z = 350
 PARAMETER_FILE = linuxcnc.var
 FEATURES = 12
 SUBROUTINE_PATH = macros
-REMAP=M6    modalgroup=6 prolog=change_prolog  ngc=tool-change  epilog=change_prolog
+#REMAP=M6    modalgroup=6 prolog=change_prolog  ngc=tool-change  epilog=change_prolog
+
 #RETAIN_G43 = 0
 #INI_VARS = 1
 #HAL_PIN_VARS = 1
@@ -108,8 +122,8 @@ REMAP=M6    modalgroup=6 prolog=change_prolog  ngc=tool-change  epilog=change_pr
 #REMAP=M6   modalgroup=6  prolog=change_prolog   ngc=psng_manual_change  epilog=change_epilog
 
 [PYTHON]
-PATH_PREPEND = ./python
-TOPLEVEL = python/toplevel.py
+#PATH_PREPEND = ./python
+#TOPLEVEL = python/toplevel.py
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
